--- a/glade/main.glade
+++ b/glade/main.glade
@@ -10,6 +10,7 @@
     <property name="default_width">800</property>
     <property name="default_height">600</property>
     <property name="icon">../img/video.svg</property>
+    <signal name="destroy" handler="gtk_main_quit" swapped="no"/>
     <child type="titlebar">
       <placeholder/>
     </child>
@@ -35,9 +36,11 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
-              <object class="GtkFixed" id="search_container">
+              <object class="GtkBox" id="search_container">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="orientation">vertical</property>
+                <property name="spacing">25</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="width_request">238</property>
@@ -50,8 +53,35 @@
                     </attributes>
                   </object>
                   <packing>
-                    <property name="x">229</property>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
                   </packing>
+                </child>
+                <child>
+                  <object class="GtkSearchEntry" id="search_entry">
+                    <property name="width_request">487</property>
+                    <property name="height_request">62</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="margin_left">50</property>
+                    <property name="margin_right">50</property>
+                    <property name="max_length">50</property>
+                    <property name="primary_icon_name">edit-find-symbolic</property>
+                    <property name="primary_icon_activatable">False</property>
+                    <property name="primary_icon_sensitive">False</property>
+                    <property name="placeholder_text" translatable="yes">Movie title...</property>
+                    <property name="input_purpose">name</property>
+                    <signal name="activate" handler="on_search_entry_activate" swapped="no"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <placeholder/>
                 </child>
               </object>
               <packing>
