--- a/glade/main.glade
+++ b/glade/main.glade
@@ -39,7 +39,7 @@ Joakim PETTERSEN
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">AFFY</property>
     <property name="window_position">center</property>
-    <property name="default_width">1200</property>
+    <property name="default_width">1000</property>
     <property name="default_height">800</property>
     <property name="icon">../img/video.svg</property>
     <signal name="destroy" handler="gtk_main_quit" swapped="no"/>
@@ -71,6 +71,8 @@ Joakim PETTERSEN
               <object class="GtkBox" id="search_container">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_left">50</property>
+                <property name="margin_right">50</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">25</property>
                 <child>
@@ -116,14 +118,27 @@ Joakim PETTERSEN
                   <object class="GtkGrid" id="search_grid">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="margin_left">50</property>
-                    <property name="margin_right">50</property>
+                    <property name="halign">center</property>
+                    <property name="margin_bottom">50</property>
+                    <property name="border_width">1</property>
                     <property name="row_spacing">25</property>
+                    <property name="column_spacing">50</property>
                     <property name="row_homogeneous">True</property>
-                    <property name="column_homogeneous">True</property>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
+                    <property name="expand">True</property>
                     <property name="fill">True</property>
                     <property name="position">2</property>
                   </packing>
