--- a/glade/main.glade
+++ b/glade/main.glade
@@ -42,7 +42,7 @@ Joakim PETTERSEN
     <property name="default_width">1000</property>
     <property name="default_height">800</property>
     <property name="icon">../img/video.svg</property>
-    <signal name="destroy" handler="gtk_main_quit" swapped="no"/>
+    <signal name="destroy" handler="on_main_window_destroy" swapped="no"/>
     <child type="titlebar">
       <placeholder/>
     </child>
@@ -57,7 +57,7 @@ Joakim PETTERSEN
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="stack">main_stack</property>
-            <signal name="button-press-event" handler="test" swapped="no"/>
+            <signal name="button-press-event" handler="fill_watchlist_grid" object="watchlist_grid" swapped="no"/>
           </object>
           <packing>
             <property name="resize">False</property>
@@ -137,6 +137,21 @@ Joakim PETTERSEN
                     <child>
                       <placeholder/>
                     </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
+                    <child>
+                      <placeholder/>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">True</property>
@@ -155,6 +170,7 @@ Joakim PETTERSEN
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
+                <property name="spacing">50</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="width_request">238</property>
@@ -178,12 +194,46 @@ Joakim PETTERSEN
                     <property name="can_focus">False</property>
                     <property name="halign">center</property>
                     <property name="row_spacing">20</property>
+                    <property name="column_spacing">50</property>
                     <property name="row_homogeneous">True</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">label</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">0</property>
+                        <property name="top_attach">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">label</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="top_attach">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">label</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">2</property>
+                        <property name="top_attach">0</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">1</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
               </object>
