--- a/glade/main.glade
+++ b/glade/main.glade
@@ -35,6 +35,69 @@ Joakim PETTERSEN
   <!-- interface-description A Film For You -->
   <!-- interface-copyright 2021 AFFY Developers -->
   <!-- interface-authors Lea LAROZE\nJoakim PETTERSEN -->
+  <object class="GtkWindow" id="error_window">
+    <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Config file error</property>
+    <property name="window_position">center</property>
+    <property name="default_width">440</property>
+    <property name="default_height">250</property>
+    <child type="titlebar">
+      <placeholder/>
+    </child>
+    <child>
+      <object class="GtkFixed">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <child>
+          <object class="GtkImage">
+            <property name="width_request">100</property>
+            <property name="height_request">80</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="stock">gtk-dialog-error</property>
+            <property name="icon_size">6</property>
+          </object>
+          <packing>
+            <property name="x">39</property>
+            <property name="y">30</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel">
+            <property name="width_request">165</property>
+            <property name="height_request">80</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">Config file error</property>
+            <attributes>
+              <attribute name="font-desc" value="Sans Bold 14"/>
+            </attributes>
+          </object>
+          <packing>
+            <property name="x">210</property>
+            <property name="y">31</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel">
+            <property name="width_request">100</property>
+            <property name="height_request">80</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">Error caused by one of the following reason :
+- File not found
+- File empty
+- File not well filled</property>
+            <signal name="destroy" handler="gtk_main_quit" swapped="no"/>
+          </object>
+          <packing>
+            <property name="x">119</property>
+            <property name="y">112</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">AFFY</property>
