--- a/glade/main.glade
+++ b/glade/main.glade
@@ -261,7 +261,7 @@ Joakim PETTERSEN
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">True</property>
+                        <property name="expand">False</property>
                         <property name="fill">True</property>
                         <property name="position">2</property>
                       </packing>
